Tvrtko Malkoc - day3 - exercise 01

--- a/exercise/01/animals.vcxproj
+++ b/exercise/01/animals.vcxproj
@@ -83,11 +83,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="animal.h" />
+    <ClCompile Include="animal.cpp" />
+    <ClCompile Include="leg_counter.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="animal.cpp" />
-    <ClCompile Include="test.cpp" />
+    <ClInclude Include="animal.h" />
+    <ClInclude Include="leg_counter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
