--- a/exercise/01/animals.vcxproj.filters
+++ b/exercise/01/animals.vcxproj.filters
@@ -1,24 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="src">
-      <UniqueIdentifier>{f2ada0ee-91e7-4bbd-b33d-837567340243}</UniqueIdentifier>
-    </Filter>
     <Filter Include="test">
       <UniqueIdentifier>{3cc0fd48-6585-4969-94bd-406daa5f786b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{5bbc7edf-5c58-4e05-91a8-f558bea5d453}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
       <Filter>test</Filter>
     </ClCompile>
-    <ClCompile Include="animal.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
+    <ClCompile Include="animal.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="animal.h">
-      <Filter>src</Filter>
-    </ClInclude>
+    <ClInclude Include="animal.h" />
   </ItemGroup>
 </Project>
